<resources>

    <string name="app_name">오픈모아+</string>
    <string name="key_araea">ㆍ</string>
    <string name="key_area_select">영역선택</string>
    <string name="key_arrow">방향키</string>
    <string name="key_asterisk">*</string>
    <string name="key_backspace">⇦</string>
    <string name="key_bieup">ㅂ</string>
    <string name="key_caret">^</string>
    <string name="key_chieut">ㅊ</string>
    <string name="key_comma_question_dot_exclamation">,\n? . !</string>
    <string name="key_copy">복사</string>
    <string name="key_copy_all">전체 복사</string>
    <string name="key_cut">자르기</string>
    <string name="key_cut_all">전체 자르기</string>
    <string name="key_delete">지우기</string>
    <string name="key_digeut">ㄷ</string>
    <string name="key_dot">.</string>
    <string name="key_down">▼</string>
    <string name="key_eight">8</string>
    <string name="key_eu">ㅡ</string>
    <string name="key_emoji">😀</string>
    <string name="key_emoji_close">⌨</string>
    <string name="key_end">끝으로</string>
    <string name="key_enter">⏎</string>
    <string name="key_five">5</string>
    <string name="key_four">4</string>
    <string name="key_giyeok">ㄱ</string>
    <string name="key_hanja_number_punctuation">漢\n12/기</string>
    <string name="key_hieut">ㅎ</string>
    <string name="key_home">처음으로</string>
    <string name="key_i">ㅣ</string>
    <string name="key_ieung">ㅇ</string>
    <string name="key_jieut">ㅈ</string>
    <string name="key_kieuk">ㅋ</string>
    <string name="key_language">한/영</string>
    <string name="key_left">◀</string>
    <string name="key_mieum">ㅁ</string>
    <string name="key_minus">-</string>
    <string name="key_next_format">%d/%d</string>
    <string name="key_nieun">ㄴ</string>
    <string name="key_nine">9</string>
    <string name="key_one">1</string>
    <string name="key_one_two_three">123</string>
    <string name="key_paste">붙이기</string>
    <string name="key_pieup">ㅍ</string>
    <string name="key_plus">+</string>
    <string name="key_punctuation">기호</string>
    <string name="key_rieul">ㄹ</string>
    <string name="key_right">▶</string>
    <string name="key_select_all">전체 선택</string>
    <string name="key_semicolon">;</string>
    <string name="key_seven">7</string>
    <string name="key_siot">ㅅ</string>
    <string name="key_six">6</string>
    <string name="key_slash︎">/</string>
    <string name="key_space">⎵</string>
    <string name="key_ssangbieup">ㅃ</string>
    <string name="key_ssangdigeut">ㄸ</string>
    <string name="key_ssanggiyeok">ㄲ</string>
    <string name="key_ssangjieut">ㅉ</string>
    <string name="key_ssangsiot">ㅆ</string>
    <string name="key_three">3</string>
    <string name="key_tieut">ㅌ</string>
    <string name="key_tilde">~</string>
    <string name="key_two">2</string>
    <string name="key_up">▲</string>
    <string name="key_zero">0</string>
    <string name="subtype_ko">한국어</string>
    <string name="subtype_en">English</string>
    <string name="setup_step1">1단계: 키보드 활성화</string>
    <string name="setup_step2">2단계: 키보드 선택</string>
    <string name="setup_status_enabled">키보드가 활성화되어 있습니다. 아래 버튼으로 선택하세요.</string>
    <string name="setup_status_disabled">키보드를 먼저 활성화해주세요.</string>
    <string name="sensitivity_title">획 인식 감도</string>
    <string name="sensitivity_description">드래그를 얼마나 길게 해야 모음으로 인식할지 설정합니다.</string>
    <string name="sensitivity_short">짧게 (민감)</string>
    <string name="sensitivity_medium">중간 (기본)</string>
    <string name="sensitivity_long">길게 (둔감)</string>
    <string name="sensitivity_restart_note">※ 키보드를 다시 열면 적용됩니다.</string>

</resources>